@@ -4,6 +4,7 @@
 	* [Libraries] Updated OpenAL library
 	* [Libraries] Uploaded missing files
 	* [Server] Don't allow @@@ characters in the player name
+	* [Server] Bugfix for sv_maxPing and sv_minPing connection issue
 	
 2022-07-04 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Moved function messaging system to C++ file
